route parameters and form template

--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,46 @@
   margin: 40px auto;
   padding: 20px;
 }
+.task-preview a {
+  text-decoration: none;
+}
+.task-preview {
+  padding: 5%;
+  margin: 5%;
+  border-radius: 10px;
+}
+.task-preview:hover {
+  box-shadow: 1px 3px 5px rgb(0, 0, 0, 0.2);
+}
 
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: #4B0082;
+  margin-bottom: 30px;
+}
+.create input, .create textarea {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button {
+  background: #4B0082;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  margin: 2%;
+  cursor: pointer;
+}
